--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,4 @@
-/*Доброго времени суток. Работа завершена...? Все отступы были сделаны исключительно на глаз ибо пиксель пёрфект помахав ручкой и показав мне средний палец ушёл в закат,одним словом отказался со мной сотрудничать (прошу принять это к сведению) Пака кидаю так, проверьте плиз может помимо отступов ещё что-то не есть гуд */
+/*Доброго времени суток. Работа завершена...? Все отступы были сделаны исключительно на глаз ибо пиксель пёрфект помахав ручкой и показав мне средний палец ушёл в закат,одним словом отказался со мной сотрудничать (прошу принять это к сведению) Пака кидаю так, проверьте плиз может ещё что-то не есть гуд */
 
 .content {
   display: flex;
