--- a/styles/style.css
+++ b/styles/style.css
@@ -10,7 +10,6 @@
   font-size: 18px;
   display: grid;
   grid-template-columns: 1fr min-content 1fr;
-  aling-items: center;
   margin: 92px 24px;
   width: 1052px;
   height: 105px;
@@ -18,15 +17,16 @@
 
 .header_menu {
   position: relative;
-  bottom: 22px;
+  left: 26.52px;
   width: 391.48px;
+  word-spacing: 1px;
 }
 
 .header_menu-list {
   display: flex;
   text-underline-position: under;
   padding-top: 44px;
-  gap: 26px;
+  gap: 32px;
 }
 
 .header_menu-link_no-bullet {
@@ -43,8 +43,10 @@
 }
 
 .header_logo {
+  position: relative;
+  bottom: 9px;
   width: 148px;
-  height: 105px;
+  left: 3px;
 }
 
 .address {
@@ -65,7 +67,7 @@
 .overlay {
   position: absolute;
   inset: 0;
-  background-color: rgb(0 0 0 / 0.5);
+  background-color: rgb(0 0 0 / 0.6);
 }
 
 .cover {
@@ -129,7 +131,7 @@
   font-size: 22px;
   color: #d4d4d4;
   line-height: 28px;
-  word-spacing: 20px;
+  word-spacing: 19px;
 }
 
 .bet-button {
@@ -147,10 +149,9 @@
 
 .lots {
   position: relative;
-  bottom: 200px;
+  bottom: 167px;
   width: 1052px;
   height: 692px;
-  gap: 0px;
   left: 24px;
 }
 
@@ -168,7 +169,6 @@
 }
 
 .lots_card_list {
-  font-family: "Raleway";
   color: #fff;
   display: flex;
   padding-top: 24px;
@@ -205,7 +205,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  padding: 45px 40px;
+  padding: 52px 40px 43px;
   background-image: url("../images/card-lot-01.jpg");
   background-size: cover;
   background-position: center;
@@ -215,7 +215,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  padding: 45px 40px;
+  padding: 52px 40px;
   background-image: url("../images/card-lot-02.jpg");
   background-size: cover;
   z-index: -1;
@@ -228,7 +228,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  padding: 45px 40px;
+  padding: 52px 40px 44px;
   background-image: url("../images/card-lot-03.jpg");
   background-size: cover;
   z-index: -1;
@@ -250,11 +250,10 @@
   display: flex;
   position: relative;
   left: 24px;
-  bottom: 240px;
+  bottom: 192px;
   width: 1052px;
   height: 595px;
   gap: 72px;
-  opacity: 0px;
 }
 
 .about_logo {
@@ -278,7 +277,6 @@
   width: 693px;
   height: 449px;
   padding-top: 133px;
-  left: 24px;
   gap: 100px;
 }
 
@@ -291,16 +289,16 @@
 .about_text {
   display: flex;
   flex-direction: column;
+  word-spacing: 1px;
   gap: 24px;
   font-size: 20px;
-  line-height: 24px;
 }
 
 .footer {
   display: flex;
   margin: auto;
   position: relative;
-  bottom: 100px;
+  bottom: 190px;
   width: 1000px;
   height: 98px;
   justify-content: space-between;
