--- a/styles/style.css
+++ b/styles/style.css
@@ -2,7 +2,6 @@
   display: flex;
   flex-wrap: wrap;
   width: 1100px;
-  height: 3028px;
   gap: 0px;
 }
 
@@ -12,13 +11,10 @@
   grid-template-columns: 1fr min-content 1fr;
   margin: 92px 24px;
   width: 1052px;
-  height: 105px;
 }
 
 .header_menu {
-  position: relative;
   left: 26.52px;
-  width: 391.48px;
   word-spacing: 1px;
 }
 
@@ -29,34 +25,31 @@
   gap: 32px;
 }
 
-.header_menu-link_no-bullet {
-  list-style-type: none;
-}
-
-.header_address-links {
-  line-height: 24.3px;
-}
-
-.header_links {
-  max-width: 240px;
-  justify-self: end;
-}
-
 .header_logo {
-  position: relative;
   bottom: 9px;
   width: 148px;
   left: 3px;
 }
 
-.address {
-  text-underline-offset: 4px;
-  padding-right: 26.52px;
-  font-style: normal;
-  font-size: 18px;
-  font-weight: 400;
+/*.header_menu-link_no-bullet {
+  list-style-type: none;
+}
+
+
+*/
+.header_link {
+  max-width: 240px;
+  justify-self: end;
+}
+
+.header_link-active {
   line-height: 24.3px;
-  height: 24px;
+}
+
+.address-links {
+  text-underline-position: under;
+  font-style: normal;
+  line-height: 24.3px;
 }
 
 .header_menu-item {
@@ -71,7 +64,6 @@
 }
 
 .cover {
-  height: 757px;
   background-image: url("../images/cover.jpg");
   background-size: cover;
   z-index: -1;
@@ -80,7 +72,6 @@
   position: relative;
   width: 1100px;
   gap: 0px;
-  bottom: 174px;
 }
 
 .cover-title {
@@ -90,7 +81,6 @@
   position: relative;
   color: #fff;
   font-size: 100px;
-  height: 355px;
   margin: 165px 50px;
   gap: 20px;
 }
@@ -118,11 +108,10 @@
 }
 
 .cover_description {
-  width: 637px;
-  height: 28px;
+  display: flex;
+  justify-content: space-between;
+  padding: 0px 50px 50px 78px;
   position: relative;
-  left: 78px;
-  bottom: 15px;
 }
 
 .cover_description-text {
@@ -135,29 +124,24 @@
 }
 
 .bet-button {
+  font-family: 'Raleway', sans-serif;
   text-transform: uppercase;
   background-color: transparent;
   color: #dddcdc;
   font-size: 22px;
-  width: 256px;
-  height: 51px;
-  top: 655px;
-  left: 794px;
+  min-width: 256px;
+  min-height: 51px;
   border: 1px solid #fff;
-  position: absolute;
+
 }
 
 .lots {
-  position: relative;
-  bottom: 167px;
+  margin: auto;
   width: 1052px;
-  height: 692px;
-  left: 24px;
 }
 
 .lots_heading {
   text-transform: uppercase;
-  position: relative;
   font-size: 40px;
   font-weight: 700;
   line-height: 46.96px;
@@ -165,10 +149,18 @@
 }
 
 .card {
-  height: 563px;
+  height: 100%;
+  position: relative;
+  background-size: cover;
+  background-position: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 52px 40px 43px;
 }
 
 .lots_card_list {
+  flex-wrap: nowrap;
   color: #fff;
   display: flex;
   padding-top: 24px;
@@ -178,7 +170,6 @@
 .lots_card-list-item {
   position: relative;
   width: 334px;
-  height: 563px;
 }
 
 .card__title {
@@ -202,43 +193,18 @@
 }
 
 .card_type_film {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  padding: 52px 40px 43px;
   background-image: url("../images/card-lot-01.jpg");
-  background-size: cover;
-  background-position: center;
 }
 
 .card_type_book {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  padding: 52px 40px;
   background-image: url("../images/card-lot-02.jpg");
-  background-size: cover;
-  z-index: -1;
-  background-position: center;
-  background-repeat: no-repeat;
-  position: relative;
 }
 
 .card_type_pictur {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  padding: 52px 40px 44px;
   background-image: url("../images/card-lot-03.jpg");
-  background-size: cover;
-  z-index: -1;
-  background-position: center;
-  background-repeat: no-repeat;
-  position: relative;
 }
 
 .lots_look-more-link {
-  position: relative;
   top: 35px;
   margin-left: 40px;
   font-family: Raleway;
@@ -248,11 +214,9 @@
 
 .about {
   display: flex;
-  position: relative;
   left: 24px;
   bottom: 192px;
   width: 1052px;
-  height: 595px;
   gap: 72px;
 }
 
@@ -268,14 +232,12 @@
 .about_logo-image {
   height: 240px;
   gap: 0px;
-  opacity: 0px;
   padding: 50px;
 }
 
 .about_column {
   display: grid;
   width: 693px;
-  height: 449px;
   padding-top: 133px;
   gap: 100px;
 }
@@ -296,26 +258,31 @@
 
 .footer {
   display: flex;
-  margin: auto;
-  position: relative;
-  bottom: 190px;
-  width: 1000px;
-  height: 98px;
+  margin: 92px 24px;
   justify-content: space-between;
 }
 
-.footer_address {
-  font-style: normal;
-  width: 240.52px;
+.footer_address-links {
+  max-width: 20%;
   font-size: 18px;
-  line-height: 24.3px;
+  text-underline-position: under;
+  font-style: normal;
+
 }
+
+.footer_link {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+/*
+.footer_menu {
+  justify-content: center;
+}*/
 
 .footer_menu-list {
   text-align: center;
   font-size: 18px;
-  width: 149px;
-  height: 64px;
 }
 
 .footer_menu-link {
@@ -323,16 +290,22 @@
   text-decoration: underline;
 }
 
-.footer_social-list {
-  flex-wrap: nowrap;
+.footer_menu-link_active {
+  text-decoration: none;
 }
 
+.footer_social-list {
+  display: flex;
+  gap: 48px;
+}
+
+/*
 .footer_social-list-item {
   width: 240px;
   justify-content: space-between;
   display: inline-flex;
 }
-
+*/
 .footer_social-icon {
   width: 48px;
   height: 48px;
