--- a/styles/style.css
+++ b/styles/style.css
@@ -6,6 +6,7 @@
 }
 
 .header {
+  padding: 20px 25px 0px;
   font-size: 18px;
   display: grid;
   grid-template-columns: 1fr min-content 1fr;
@@ -14,21 +15,18 @@
 }
 
 .header_menu {
-  left: 26.52px;
-  word-spacing: 1px;
 }
 
 .header_menu-list {
   display: flex;
   text-underline-position: under;
-  padding-top: 44px;
-  gap: 32px;
+  padding-top: 14%;
+  gap: 34px;
 }
 
 .header_logo {
-  bottom: 9px;
   width: 148px;
-  left: 3px;
+  padding-top: 5%;
 }
 
 /*.header_menu-link_no-bullet {
@@ -37,20 +35,29 @@
 
 
 */
-.header_link {
+.address-links_1 {
   max-width: 240px;
+}
+
+.address_link_1 {
+  padding-top: 21px;
   justify-self: end;
 }
 
-.header_link-active {
-  line-height: 24.3px;
+.address_link_2 {
+  font-size: 18px;
 }
 
-.address-links {
+.address_text {
   text-underline-position: under;
   font-style: normal;
   line-height: 24.3px;
 }
+/*
+.header_link-active {
+  line-height: 24.3px;
+}
+*/
 
 .header_menu-item {
   list-style: circle;
@@ -81,8 +88,7 @@
   position: relative;
   color: #fff;
   font-size: 100px;
-  margin: 165px 50px;
-  gap: 20px;
+  margin: 165px 50px 139px 48px;
 }
 
 .aligned-text {
@@ -90,11 +96,13 @@
 }
 
 .aligned-text_center {
+  padding-top: 17px;
   line-height: 1;
   text-align: center;
 }
 
 .aligned-text_right {
+  padding-top: 18px;
   text-align: right;
   line-height: 1;
 }
@@ -115,6 +123,7 @@
 }
 
 .cover_description-text {
+  padding-top: 11px;
   text-transform: uppercase;
   text-wrap: nowrap;
   font-size: 22px;
@@ -124,15 +133,17 @@
 }
 
 .bet-button {
-  font-family: 'Raleway', sans-serif;
-  text-transform: uppercase;
+  height: 51px;
+  width: 256px;
   background-color: transparent;
-  color: #dddcdc;
   font-size: 22px;
-  min-width: 256px;
-  min-height: 51px;
   border: 1px solid #fff;
+}
 
+.button_text {
+  font-family: "Raleway", sans-serif;
+  text-transform: uppercase;
+  color: #dddcdc;
 }
 
 .lots {
@@ -141,7 +152,7 @@
 }
 
 .lots_heading {
-  padding-top: 20%;
+  padding-top: 17%;
   padding-left: 40px;
   text-transform: uppercase;
   font-size: 40px;
@@ -161,10 +172,10 @@
 }
 
 .lots_card_list {
-  flex-wrap: nowrap;
+  flex-wrap: wrap;
   color: #fff;
   display: flex;
-  padding-top: 24px;
+  padding-top: 26px;
   gap: 24px;
 }
 
@@ -206,13 +217,13 @@
 }
 
 .lots_look-more-link {
-  margin-left: 40px;
+  margin: 34px 40px;
   font-size: 20px;
   text-underline-position: under;
 }
 
 .about {
-  padding-top: 10%;
+  margin: 115px 24px ;
   display: flex;
   width: 1052px;
   gap: 72px;
@@ -223,7 +234,7 @@
   border-radius: 50%;
   width: 240px;
   height: 240px;
-  margin-top: 35px;
+  margin-top: 32px;
   margin-left: 47px;
 }
 
@@ -254,21 +265,29 @@
   font-size: 20px;
 }
 
+.word-spacing_1 {
+  word-spacing: 1px;
+}
+
+.word-spacing_2 {
+  word-spacing: normal;
+}
+.letter-spacing {
+}
+
 .footer {
-  padding-top: 10%;
   display: flex;
-  margin: 92px 24px;
+  margin: 67px 50px;
   justify-content: space-between;
 }
 
 .footer_address-links {
-  max-width: 20%;
+  max-width: 24%;
   font-size: 18px;
   text-underline-position: under;
   font-style: normal;
-
 }
-
+/*
 .footer_link {
   display: flex;
   flex-wrap: wrap;
