--- a/styles/style.css
+++ b/styles/style.css
@@ -14,14 +14,20 @@
   width: 1052px;
 }
 
-.header_menu {
-}
-
 .header_menu-list {
   display: flex;
   text-underline-position: under;
   padding-top: 14%;
   gap: 33.5px;
+}
+
+.header_menu-item {
+  list-style: circle;
+  text-underline-position: under;
+}
+
+.header_menu-item_no-bullet {
+  list-style-type: none;
 }
 
 .header_logo {
@@ -32,12 +38,7 @@
   border: 6px;
   width: 137px;
 }
-/*.header_menu-link_no-bullet {
-  list-style-type: none;
-}
 
-
-*/
 .address-links_1 {
   max-width: 240px;
 }
@@ -61,11 +62,6 @@
   line-height: 24.3px;
 }
 */
-
-.header_menu-item {
-  list-style: circle;
-  text-underline-position: under;
-}
 
 .overlay {
   position: absolute;
