--- a/styles/style.css
+++ b/styles/style.css
@@ -23,11 +23,19 @@
 
 .header_menu-item {
   list-style: circle;
-  text-underline-position: under;
 }
 
 .header_menu-item_no-bullet {
   list-style-type: none;
+}
+
+.menu_links {
+  text-underline-position: under;
+  text-decoration: underline;
+}
+
+.menu_link-active {
+  text-decoration: none;
 }
 
 .header_logo {
@@ -57,11 +65,6 @@
   font-style: normal;
   line-height: 24.3px;
 }
-/*
-.header_link-active {
-  line-height: 24.3px;
-}
-*/
 
 .overlay {
   position: absolute;
@@ -291,7 +294,7 @@
   text-align: center;
   font-size: 18px;
 }
-
+/*
 .footer_menu-link {
   text-underline-position: under;
   text-decoration: underline;
@@ -300,7 +303,7 @@
 .footer_menu-link_active {
   text-decoration: none;
 }
-
+*/
 .footer_social-list {
   display: flex;
   gap: 48px;
